--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -24,3 +24,9 @@ jobs:
 
       - name: Build Docker image
         run: docker build -t nodejs-starter .
+
+      - name: Login to Dokcer hub
+        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+
+      - name: Tag Docker image
+        run: docker tag nodejs-starter ${{ secrets.DOCKER_USERNAME }}/nodejs-starter:latest
